--- a/newstuff.html
+++ b/newstuff.html
@@ -19,8 +19,8 @@
 
   <!-- Vendor CSS Files -->
   <link href="https://www.williambreindel.com/bootstrap.min.css" rel="stylesheet">
-  <link href="https://www.williambreindel.com/icofont.min.css" rel="stylesheet">
-  <link href="https://www.williambreindel.com/boxicons.min.css" rel="stylesheet">
+ <!--  <link href="https://www.williambreindel.com/icofont.min.css" rel="stylesheet">-->
+ <!--  <link href="https://www.williambreindel.com/boxicons.min.css" rel="stylesheet">-->
   <link href="https://www.williambreindel.com/animate.min.css" rel="stylesheet">
   <link href="https://www.williambreindel.com/venobox.css" rel="stylesheet">
   <link href="https://www.williambreindel.com/owl.carousel.min.css" rel="stylesheet">
@@ -254,14 +254,15 @@
 </div>   -->
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
+  <!--   <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo 
+    <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
+       Uncomment below if you prefer to use an image logo 
  <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="mynavbar" class="navbar navbar-light bg-light px-3">
+      <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+	     <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></a></h1>
         <ul class="nav nav-pills>
           <li class="nav-item"><a class="nav-link" href="#scrollspyHeading1">Home</a></li>
 
@@ -278,7 +279,7 @@
       </nav><!-- .nav-menu -->
 
 
-    </div>
+    
   </header><!-- End Header -->
 
 	
@@ -287,7 +288,7 @@
 	
 	
 	
-	<div data-bs-spy="scroll" data-bs-target="#mynavbar" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+	<div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
   <h4 id="scrollspyHeading1">First heading</h4>
   <p>...hgjfjfj</p>
   <h4 id="scrollspyHeading2">Second heading</h4>
