--- a/newstuff.html
+++ b/newstuff.html
@@ -232,7 +232,7 @@
 
       <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
 	     <h1 class="logo mr-auto"> <a class="navbar-brand" href="#"><span>William </span>Breindel</a></a></h1>
-        <ul class="nav nav-pills>
+        <ul class="nav nav-pills">
           <li class="nav-item"><a class="nav-link" href="#scrollspyHeading1">Home</a></li>
 
           <li class="nav-item"><a class="nav-link" href="#scrollspyHeading2">About</a>
