--- a/newstuff.html
+++ b/newstuff.html
@@ -14,6 +14,11 @@
   <link href="https://www.williambreindel.com/favicon.png" rel="icon">
   <link href="https://www.williambreindel.com/apple-touch-icon.png" rel="apple-touch-icon">
 	
+	
+		<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/jquery.fullPage.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/index.css" />
+	<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -256,30 +261,19 @@
 	
 	
 	
-	
+	 <div id="fullpage">
 	<div data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-  <h4 id="scrollspyHeading1">First heading</h4>
-  <p>...hgjfjfj</p>  <p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p><p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p><p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p>v
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p>v
-			    <p>.fjfgfjj..</p>vv<p>.fjfgfjj..</p>  <p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p><p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p><p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p>v
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p>v
-			    <p>.fjfgfjj..</p>vv<p>.fjfgfjj..</p>  <p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p><p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p><p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p>v
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p>v
-			    <p>.fjfgfjj..</p>vv<p>.fjfgfjj..</p>  <p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p><p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p><p>.fjfgfjj..</p>
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p>v
-			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p>v
-			    <p>.fjfgfjj..</p>vv<p>.fjfgfjj..</p>
+  <h4 id="scrollspyHeading1">1</h4>
+
+	  <! ––  Page1 starts below   --!>
+     <div  class="section" id="mainPageSectionOne">
+		<div class="container" id="mainMenuContainer">
+			<div class="cloud" id="mainMenuCloud"></div>
+			<div id="frontPageName">
+				<h1 class="frontPageNameH">William Breindel<br><span id="frontPageNameH2">Software Developer</span></h1>
+			</div>
+		  </div>
+    </div>
   <h4 id="scrollspyHeading2">Second heading</h4>
   <p>...</p>  <p>.fjfgfjj..</p>
 			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p><p>.fjfgfjj..</p>
@@ -329,6 +323,10 @@
 			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p>v
 			    <p>.fjfgfjj..</p>vv<p>.fjfgfjj..</p>
 			     <h4 id="scrollspyHeading6">Sifth heading</h4>
+		
+		
+		 </div>
+	</div>
 						       
 						        <!-- ======= Footer ======= -->
  <footer id="footer">
