--- a/newstuff.html
+++ b/newstuff.html
@@ -14,11 +14,7 @@
   <link href="https://www.williambreindel.com/favicon.png" rel="icon">
   <link href="https://www.williambreindel.com/apple-touch-icon.png" rel="apple-touch-icon">
 	
-	
-		<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/jquery.fullPage.min.css" />
-	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/index.css" />
-	<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">
-	<meta content="width=device-width, initial-scale=1" name="viewport" />
+
 	<!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -261,19 +257,65 @@
 	
 	
 	
-	 <div id="fullpage">
+	
 	<div data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
   <h4 id="scrollspyHeading1">1</h4>
+<!-- ======= Hero Section ======= -->
+<section id="hero">
+    <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
 
-	  <! ––  Page1 starts below   --!>
-     <div  class="section" id="mainPageSectionOne">
-		<div class="container" id="mainMenuContainer">
-			<div class="cloud" id="mainMenuCloud"></div>
-			<div id="frontPageName">
-				<h1 class="frontPageNameH">William Breindel<br><span id="frontPageNameH2">Software Developer</span></h1>
-			</div>
-		  </div>
+      <div class="carousel-inner" role="listbox">
+
+        <!-- Slide 1 -->
+        <div class="carousel-item active" style="background-image: url( {{asset('frontend/assets/img/slide/slide-1.jpg')}} )">
+          <div class="carousel-container">
+            <div class="carousel-content animate__animated animate__fadeInUp">
+              <h2>Welcome to <span>Company</span></h2>
+              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 2 -->
+        <div class="carousel-item" style="background-image: url({{asset('frontend/assets/img/slide/slide-2.jpg')}})">
+          <div class="carousel-container">
+            <div class="carousel-content animate__animated animate__fadeInUp">
+              <h2>Lorem Ipsum Dolor</h2>
+              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 3 -->
+        <div class="carousel-item" style="background-image: url({{asset('frontend/assets/img/slide/slide-3.jpg')}})">
+          <div class="carousel-container">
+            <div class="carousel-content animate__animated animate__fadeInUp">
+              <h2>Sequi ea ut et est quaerat</h2>
+              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon icofont-simple-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+
+      <a class="carousel-control-next" href="#heroCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon icofont-simple-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+
+      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+
     </div>
+  </section><!-- End Hero -->
+
   <h4 id="scrollspyHeading2">Second heading</h4>
   <p>...</p>  <p>.fjfgfjj..</p>
 			    <p>.fjfgfjj..</p><p>.fjfgfjj..</p><p>.fjfgfjj..</p>
@@ -325,7 +367,7 @@
 			     <h4 id="scrollspyHeading6">Sifth heading</h4>
 		
 		
-		 </div>
+		
 	</div>
 						       
 						        <!-- ======= Footer ======= -->
