--- a/newstuff.html
+++ b/newstuff.html
@@ -14,7 +14,7 @@
   <link href="https://www.williambreindel.com/favicon.png" rel="icon">
   <link href="https://www.williambreindel.com/apple-touch-icon.png" rel="apple-touch-icon">
 	
-
+<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/index.css" />
 	<!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
