--- a/newstuff.html
+++ b/newstuff.html
@@ -267,7 +267,7 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url( {{asset('frontend/assets/img/slide/slide-1.jpg')}} )">
+        <div class="carousel-item active" style="background-image: url('roadRain3.jpg')no-repeat center center fixed;">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Welcome to <span>Company</span></h2>
@@ -278,7 +278,7 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url({{asset('frontend/assets/img/slide/slide-2.jpg')}})">
+        <div class="carousel-item" style="background-image: url('01.jpg')no-repeat center center fixed;">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Lorem Ipsum Dolor</h2>
@@ -289,7 +289,7 @@
         </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url({{asset('frontend/assets/img/slide/slide-3.jpg')}})">
+        <div class="carousel-item" style="background-image: url('fall2.jpg')no-repeat center center fixed;">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Sequi ea ut et est quaerat</h2>
