--- a/newstuff.html
+++ b/newstuff.html
@@ -367,6 +367,8 @@
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                  
                 </svg>
+		      <span style=" background:url('phpL.png');"></span>
+
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="">Lorem Ipsum</a></h4>
@@ -380,10 +382,9 @@
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                  
                 </svg>
+		      <span style=" background:url('reactL.png');"></span>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div>
 
