--- a/newstuff.html
+++ b/newstuff.html
@@ -239,7 +239,7 @@
           <li class="nav-item"><a class="nav-link" href="#scrollspyHeading2">About</a>
           </li>
 
-          <li class="nav-item"><a class="nav-link" href="#scrollspyHeading3">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#scrollspyHeading3">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#scrollspyHeading4">Portfolio</a></li>
           <li class="nav-item"><a class="nav-link" href="#scrollspyHeading5">Pricing</a></li>
           <li class="nav-item"><a class="nav-link" href="#scrollspyHeading6">Blog</a></li>
@@ -269,10 +269,12 @@
         <!-- Slide 1 -->
         <div class="carousel-item active" style="background-image: url('roadRain3.jpg');">
           <div class="carousel-container">
-            <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Welcome to <span>Company</span></h2>
-              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+		  <div style=" top: 15%;position: inherit;opacity: 0.5;"><h2 id="mainPageSectionTwoHeader" style="color: black;background: white;font-weight: bold;width: 100%;
+">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack software developer in Buffalo, NY.</h2></div> 
+		  <div class="carousel-content animate__animated animate__fadeInUp">
+              <h2>About <span>William</span></h2>
+              <p>More about William</p>
+              <div class="text-center"><a href="#scrollspyHeading2" class="btn-get-started">Read More</a></div>
             </div>
           </div>
         </div>
@@ -280,10 +282,12 @@
         <!-- Slide 2 -->
         <div class="carousel-item" style="background-image: url('01.jpg');">
           <div class="carousel-container">
-            <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Lorem Ipsum Dolor</h2>
-              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+		  <div style=" top: 15%;position: inherit;opacity: 0.5;"><h2 id="mainPageSectionTwoHeader" style="color: black;background: white;font-weight: bold;width: 100%;
+">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack software developer in Buffalo, NY.</h2></div> 
+		  <div class="carousel-content animate__animated animate__fadeInUp">
+              <h2>Skills</h2>
+              <p> The skills William brings to the table</p>
+              <div class="text-center"><a href="#scrollspyHeading3" class="btn-get-started">Read More</a></div>
             </div>
           </div>
         </div>
@@ -291,10 +295,12 @@
         <!-- Slide 3 -->
         <div class="carousel-item" style="background-image: url('fall2.jpg');">
           <div class="carousel-container">
-            <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Sequi ea ut et est quaerat</h2>
-              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+		  <div style=" top: 15%;position: inherit;opacity: 0.5;"><h2 id="mainPageSectionTwoHeader" style="color: black;background: white;font-weight: bold;width: 100%;
+">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack software developer in Buffalo, NY.</h2></div> 
+		  <div class="carousel-content animate__animated animate__fadeInUp">
+              <h2>Contact William</h2>
+              <p>Contact william for more information and to reach out.</p>
+              <div class="text-center"><a href="#scrollspyHeading5" class="btn-get-started">Read More</a></div>
             </div>
           </div>
         </div>
@@ -322,13 +328,14 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About Us</strong></h2>
+         
         </div>
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+         <div id="page2PicDiv" style="width:100%">
+		  <img id="myMainPagePic" src="https://www.williambreindel.com/Bill.jpg" alt="My Picture">
+	    </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
             <p>
