--- a/newstuff.html
+++ b/newstuff.html
@@ -338,20 +338,13 @@
 	    </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
-            </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
-            </ul>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+  <h3 id="section2Bio">I've been lucky to have a career that I'm passionate about for the last fifteen years, 
+		  working for a company that creates and sells lasertag hardware and software all over the world. 
+		  I have worn many hats, but for the past several years my focus has been on development. I am motivated by my relationship 
+		  with clients and my love of the game to create fun, interactive user experiences. I build and maintain websites, 
+		  databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North 
+		  Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably 
+		  Star Wars Night with the Buffalo Bisons. You might know me as Director Krennic.</h3>
           </div>
         </div>
 
