--- a/newstuff.html
+++ b/newstuff.html
@@ -333,8 +333,8 @@
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right">
-         <div id="page2PicDiv" style="width:100%">
-		  <img id="myMainPagePic" src="https://www.williambreindel.com/Bill.jpg" alt="My Picture">
+         <div id="page2PicDiv" >
+		  <img id="myMainPagePic" style="width:100%" src="https://www.williambreindel.com/Bill.jpg" alt="My Picture">
 	    </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
