--- a/newstuff.html
+++ b/newstuff.html
@@ -561,34 +561,51 @@
       </div>
     </section><!-- End Portfolio Section -->
   <h4 id="scrollspyHeading5">Fifth heading</h4>
- <div  class="section" id="mainPageSectionTwo">
-	  <h2 id="mainPageSectionTwoHeader">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack software developer in Buffalo, NY.</h2>
-	  <h4 id="mainPageSectionTwoHeaderMobile">Hi, I'm William Breindel. My friends <br>call me Bill.  I'm a full-stack <br>software developer in Buffalo, NY.</h4>
-	  <h5 style="display:none">ddd</h5>
-	    <div id="page2PicDiv">
-		  <img id="myMainPagePic" src="https://www.williambreindel.com/Bill.jpg" alt="My Picture">
-	    </div>
-	  <h3 id="section2Bio">I've been lucky to have a career that I'm passionate about for the last fifteen years, 
-		  working for a company that creates and sells lasertag hardware and software all over the world. 
-		  I have worn many hats, but for the past several years my focus has been on development. I am motivated by my relationship 
-		  with clients and my love of the game to create fun, interactive user experiences. I build and maintain websites, 
-		  databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North 
-		  Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably 
-		  Star Wars Night with the Buffalo Bisons. You might know me as Director Krennic.</h3>
-		
-	  <h6 id="section2BioMobile">I've been lucky to have a career that I'm passionate about for the last fifteen years, 
-		  working for a company that creates and sells lasertag hardware and software all over the world. 
-		  I have worn many hats, but for the past several years my focus has been on development. I am motivated by my relationship 
-		  with clients and my love of the game to create fun, interactive user experiences. I build and maintain websites, 
-		  databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North 
-		  Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably 
-		  Star Wars Night with the Buffalo Bisons. You might know me as Director Krennic.</h6>
-	</div>
-			     <h4 id="scrollspyHeading6">Sifth heading</h4>
-
-		
-		
-	</div>
+   <div  class="section" id="mainPageSectionFour">
+	<div class="container2" id="section4Container">
+		<div class="container" id="contactContainer">
+			<div id="toppadding"> </div>
+	    <form id="contactForm" action="https://forms.un-static.com/forms/07e374b1fcfcdfb1196554775234f4809991f046"  method="post">
+	  
+	  
+	  <table>
+		  <tr class="nonMessageRow">
+		  <td>
+        		<label for="nameFormButton">Name: </label></td>
+		  <td>
+			  <input class="contactMeFormButton" id="nameFormButton" name="nameFormButton" type="text" placeholder="Name">
+			  </td>
+		  </tr>
+        	  <tr class="nonMessageRow">
+			<td>
+  			<label for="companyNameFormButton">Company Name: </label></td>
+			  <td>
+  			<input class="contactMeFormButton" id="companyNameFormButton" name="companyNameFormButton" type="text" placeholder="Company Name"></td>
+		  </tr>
+		  <tr class="nonMessageRow"><td style="text-align:center">
+			  <label for="emailAddressFormButton" required>Email Address: </label></td>
+			<td> 
+ 			 <input class="contactMeFormButton" id="emailAddressFormButton" name="emailAddressFormButton" type="email" placeholder="Email Address"></input>
+		  </tr>
+		  <tr class="nonMessageRow"><td colspan="2">
+			<label for="messageTextFormButton">Message: </label></td></tr>
+		<tr class="messageRow"><td colspan="2" >
+  			<textarea class="messageTextFormButton" id="messageTextFormButton" name="messageTextFormButton"></textarea></td></tr>
+	 
+	  <tr id="nonMessageRow"><td colspan="2">
+  			<input id="submitButtonFormButton" type ="submit" value="Press to send"></input></td></tr></table>
+ 	 </form>
+	  
+	  
+	  
+	  
+	  
+	  </div>
+		<div id="mainPageFoot">
+			<a href="https://www.williambreindel.com/"  id="footCopyright">Copyright 2020 -  William Breindel </a>
+			<a href="https://www.iconfinder.com/ratch0013" id="footFYI">Clip art courtesy of Eucalyp Studio</a>
+	  	</div>	
+	</div></div>
 						       
 						        <!-- ======= Footer ======= -->
  <footer id="footer">
