--- a/newstuff.html
+++ b/newstuff.html
@@ -459,7 +459,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Programming Languages</li>
               <li data-filter=".filter-card">Additional Skills</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-web">Technologies</li>
             </ul>
           </div>
         </div>
@@ -467,62 +467,62 @@
         <div class="row portfolio-container" data-aos="fade-up">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="https://www.williambreindel.com/phpL.png" class="img-fluid" alt="">
+            <img src="https://www.williambreindel.com/phpM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
+              <h4>PHP</h4>
+              <p>PHP</p>
               <a href="https://www.williambreindel.com/phpL.png" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="https://www.williambreindel.com/csharpL.png" class="img-fluid" alt="">
+            <img src="https://www.williambreindel.com/csharpM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
+              <h4>C#</h4>
+              <p>C#</p>
               <a href="https://www.williambreindel.com/phpL.png" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="https://www.williambreindel.com/javascriptL.png" class="img-fluid" alt="">
+            <img src="https://www.williambreindel.com/javascriptM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
+              <h4>Javascript</h4>
+              <p>Javascript</p>
               <a href="https://www.williambreindel.com/phpL.png" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="https://www.williambreindel.com/html5L.png" class="img-fluid" alt="">
+            <img src="https://www.williambreindel.com/html5M.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 2</h4>
-              <p>Card</p>
+              <h4>HTML</h4>
+              <p>HTML</p>
               <a href="https://www.williambreindel.com/phpL.png" data-gall="portfolioGallery" class="venobox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="https://www.williambreindel.com/piL.png" class="img-fluid" alt="">
+            <img src="https://www.williambreindel.com/piM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
+              <h4>Raspberry Pi</h4>
+              <p>Raspberry Pi</p>
               <a href="https://www.williambreindel.com/phpL.png" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="https://www.williambreindel.com/cssL.png" class="img-fluid" alt="">
+            <img src="https://www.williambreindel.com/cssM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
-              <a href="https://www.williambreindel.com/html5L.png" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>CSS</h4>
+              <p>CSS</p>
+              <a href="https://www.williambreindel.com/html5L.png" data-gall="portfolioGallery" class="venobox preview-link" title="CSS"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="CSS"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
