--- a/newstuff.html
+++ b/newstuff.html
@@ -459,20 +459,18 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Programming Languages</li>
               <li data-filter=".filter-card">Additional Skills</li>
-              <li data-filter=".filter-web">Technologies</li>
+              <li data-filter=".filter-tech">Technologies</li>
+			  <li data-filter=".filter-lang">Lang</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-lang">
             <img src="https://www.williambreindel.com/phpM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>PHP</h4>
-              <p>PHP</p>
-              <a href="https://www.williambreindel.com/phpL.png" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -480,74 +478,63 @@
             <img src="https://www.williambreindel.com/csharpM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>C#</h4>
-              <p>C#</p>
-              <a href="https://www.williambreindel.com/phpL.png" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
+</div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="https://www.williambreindel.com/javascriptM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Javascript</h4>
-              <p>Javascript</p>
-              <a href="https://www.williambreindel.com/phpL.png" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
+			  </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="https://www.williambreindel.com/html5M.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>HTML</h4>
-              <p>HTML</p>
-              <a href="https://www.williambreindel.com/phpL.png" data-gall="portfolioGallery" class="venobox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
+              </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="https://www.williambreindel.com/piM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Raspberry Pi</h4>
-              <p>Raspberry Pi</p>
-              <a href="https://www.williambreindel.com/phpL.png" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="https://www.williambreindel.com/awsM.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Amazon Web Services</h4>
+             </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="https://www.williambreindel.com/cssM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>CSS</h4>
-              <p>CSS</p>
-              <a href="https://www.williambreindel.com/html5L.png" data-gall="portfolioGallery" class="venobox preview-link" title="CSS"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="CSS"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="https://www.williambreindel.com/phpL.png" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="https://www.williambreindel.com/bootstrapM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 1</h4>
-              <p>Card</p>
-              <a href="{{ asset('frontend/assets/img/portfolio/portfolio-7.jpg') }}" data-gall="portfolioGallery" class="venobox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
+              <h4>Bootstrap</h4>
+           </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="https://www.williambreindel.com/laravelM.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Laravel</h4>
+           </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="{{ asset('frontend/assets/img/portfolio/portfolio-8.jpg') }}" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-tech">
+            <img src="https://www.williambreindel.com/visualstudioM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 3</h4>
-              <p>Card</p>
-              <a href="{{ asset('frontend/assets/img/portfolio/portfolio-8.jpg') }}" data-gall="portfolioGallery" class="venobox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
+              <h4>Visual Studio</h4>
+             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="{{ asset('frontend/assets/img/portfolio/portfolio-9.jpg') }}" class="img-fluid" alt="">
+            <img src="" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
               <p>Web</p>
