--- a/newstuff.html
+++ b/newstuff.html
@@ -110,6 +110,84 @@
         '微软雅黑', 'Microsoft YaHei', SimSun, 'Soleil', Helvetica, Arial,
         sans-serif;
 }
+		
+		#contactContainer{
+ background: url('02.jpg');
+ background-size:cover;
+}
+		
+		form{
+ background-color:#ABD278;
+ border:4px;
+ width:50%;
+ height:50%;
+ border-style:solid;
+ border-color:black;
+ text-align:center;
+ display:inline-block;
+ padding: 50px;
+ border-radius:25px;
+ box-shadow:11px 11px 20px 0px black;
+}
+		#submitButtonFormButton{
+ width:50%;
+ background-color:gainsboro;
+}
+
+#submitButtonFormButton:hover{
+ color:white;
+ background-color:lightslategrey;
+}
+		
+		
+#contactMeTop{
+ height:25%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
+h1#successfulMessage{
+  color: white;
+}
+
+#contactMeFoot{
+ height:5%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ text-align:center;
+ background-color:grey;
+ color: white;
+ margin-top: 5%;
+}
+
+#mainPageFoot{
+ height:5%;
+ align-items: center;
+ text-align:center;
+ background-color:grey;
+ color: white;
+ width:100%;
+ position:absolute;
+ top:95%;
+}
+
+
+.contactMeFormButton{
+ width:100%
+}
+
+.contactMeFormButton:hover {
+    box-shadow: 2px 2px 4px #000000;
+}
+
+.messageTextFormButton{
+ width:100%;
+ height: 100%;
+ resize: none;
+}
+
 
 .skitchToast {
     padding-left: 20px;
