--- a/newstuff.html
+++ b/newstuff.html
@@ -98,6 +98,12 @@
     font-family: 'Soleil', Helvetica, Arial, sans-serif;
     border: 2px rgba(255, 255, 255, 0.38) solid;
 }
+		#toppadding{
+     height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .lang-zh-cn .skitchToastBox {
     font-family: '微软雅黑', 'Microsoft YaHei', SimSun,
@@ -114,7 +120,11 @@
 		#contactContainer{
  background: url('02.jpg');
  background-size:cover;
+			height:600px;
 }
+		#contactMeDiv{
+		text-align: center;	
+		}
 		
 		form{
  background-color:#ABD278;
@@ -690,6 +700,7 @@ h1#successfulMessage{
 	<div class="container2" id="section4Container">
 		<div class="container" id="contactContainer">
 			<div id="toppadding"> </div>
+			<div id="contactMeDiv">
 	    <form id="contactForm" action="https://forms.un-static.com/forms/07e374b1fcfcdfb1196554775234f4809991f046"  method="post">
 	  
 	  
@@ -719,7 +730,7 @@ h1#successfulMessage{
 	 
 	  <tr id="nonMessageRow"><td colspan="2">
   			<input id="submitButtonFormButton" type ="submit" value="Press to send"></input></td></tr></table>
- 	 </form>
+		</form></div>
 	  
 	  
 	  
