--- a/newstuff.html
+++ b/newstuff.html
@@ -356,6 +356,20 @@
               <h4>React</h4>
             </div>
           </div>
+		
+				            <div class="col-lg-4 col-md-6 portfolio-item filter-lang">
+            <img src="https://www.williambreindel.com/nodejsM.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Node JS</h4>
+            </div>
+          </div>
+		
+				            <div class="col-lg-4 col-md-6 portfolio-item filter-lang">
+            <img src="https://www.williambreindel.com/angularM.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Angular</h4>
+            </div>
+          </div>
 		  
           <div class="col-lg-4 col-md-6 portfolio-item filter-add">
             <img src="https://www.williambreindel.com/bootstrapM.png" class="img-fluid" alt="">
@@ -415,11 +429,24 @@
               <h4>Visual Studio</h4>
              </div>
           </div>
+		<div class="col-lg-4 col-md-6 portfolio-item filter-tech">
+            <img src="https://www.williambreindel.com/vscodeM.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Visual Studio Code</h4>
+             </div>
+          </div>
 		  
 		  <div class="col-lg-4 col-md-6 portfolio-item filter-add">
             <img src="https://www.williambreindel.com/apacheM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Apache</h4>
+             </div>
+          </div>
+		
+				  <div class="col-lg-4 col-md-6 portfolio-item filter-add">
+            <img src="https://www.williambreindel.com/linuxM.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Linux</h4>
              </div>
           </div>
 
