--- a/newstuff.html
+++ b/newstuff.html
@@ -400,7 +400,7 @@
 		            <div class="col-lg-4 col-md-6 portfolio-item filter-add">
             <img src="https://www.williambreindel.com/jsonM.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Visual Studio</h4>
+              <h4>JSON</h4>
              </div>
           </div>
 		  
