--- a/newstuff.html
+++ b/newstuff.html
@@ -29,6 +29,7 @@
     <link href="https://www.williambreindel.com/css/remixicon.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
+    <link href="https://www.williambreindel.com/css/index.css" rel="stylesheet">
     <link href="https://www.williambreindel.com/css/style.css" rel="stylesheet">
     <link href="https://www.williambreindel.com/css/newstuff.css" rel="stylesheet">
 
@@ -82,12 +83,10 @@
                   <!-- Slide 1 -->
                   <div id="slide1" class="carousel-item active">
                       <div class="carousel-container">
-                          <div class="slideDiv">
-                              <h2 class="slideH2" id="mainPageSectionTwoHeader">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack software developer in Buffalo, NY.</h2>
-                          </div>
+
                           <div class="carousel-content animate__animated animate__fadeInUp">
                               <h2>About <span>William</span></h2>
-                              <p>More about William</p>
+                              <p>Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack software developer in Buffalo, NY.</p>
                               <div class="text-center">
                                   <a href="#scrollspyHeading2" class="btn-get-started">Read More</a>
                               </div>
@@ -98,9 +97,7 @@
                   <!-- Slide 2 -->
                   <div id="slide2" class="carousel-item">
                       <div class="carousel-container">
-                          <div class="slideDiv">
-                              <h2 class="slideH2" id="mainPageSectionTwoHeader">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack software developer in Buffalo, NY.</h2>
-                          </div>
+
                           <div class="carousel-content animate__animated animate__fadeInUp">
                               <h2>Skills</h2>
                               <p> The skills William brings to the table</p>
@@ -114,9 +111,7 @@
                   <!-- Slide 3 -->
                   <div id="slide3" class="carousel-item">
                       <div class="carousel-container">
-                          <div class="slideDiv">
-                              <h2 class="slideH2" id="mainPageSectionTwoHeader">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack software developer in Buffalo, NY.</h2>
-                          </div>
+
                           <div class="carousel-content animate__animated animate__fadeInUp">
                               <h2>Contact William</h2>
                               <p>Contact william for more information and to reach out.</p>
