--- a/newstuff.html
+++ b/newstuff.html
@@ -192,73 +192,77 @@
                       </div>
                   </div>
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-                      <div class="icon-box iconbox-orange ">
-                          <div class="icon">
-                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                  <div class="row">
+                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                          <div class="icon-box iconbox-blue">
+                              <div class="icon">
+                                  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                              </svg>
-                              <span style=" background:url('reactL.png');"></span>
-                              <i class="bx bx-file"></i>
+                                  </svg>
+                                  <span style=" background:url('phpL.png');"></span>
+
+                                  <i class="bx bxl-dribbble"></i>
+                              </div>
+                              <h4><a href="">Lorem Ipsum</a></h4>
+                              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
                           </div>
                       </div>
-                  </div>
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-                      <div class="icon-box iconbox-pink">
-                          <div class="icon">
-                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+                          <div class="icon-box iconbox-pink">
+                              <div class="icon">
+                                  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                              </svg>
-                              <i class="bx bx-tachometer"></i>
+                                  </svg>
+                                  <i class="bx bx-tachometer"></i>
+                              </div>
+                              <h4><a href="">Magni Dolores</a></h4>
+                              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                           </div>
-                          <h4><a href="">Magni Dolores</a></h4>
-                          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                       </div>
-                  </div>
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
-                      <div class="icon-box iconbox-yellow">
-                          <div class="icon">
-                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+                          <div class="icon-box iconbox-yellow">
+                              <div class="icon">
+                                  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                              </svg>
-                              <i class="bx bx-layer"></i>
+                                  </svg>
+                                  <i class="bx bx-layer"></i>
+                              </div>
+                              <h4><a href="">Nemo Enim</a></h4>
+                              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                           </div>
-                          <h4><a href="">Nemo Enim</a></h4>
-                          <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                       </div>
-                  </div>
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-                      <div class="icon-box iconbox-red">
-                          <div class="icon">
-                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+                          <div class="icon-box iconbox-red">
+                              <div class="icon">
+                                  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                              </svg>
-                              <i class="bx bx-slideshow"></i>
+                                  </svg>
+                                  <i class="bx bx-slideshow"></i>
+                              </div>
+                              <h4><a href="">Dele Cardo</a></h4>
+                              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
                           </div>
-                          <h4><a href="">Dele Cardo</a></h4>
-                          <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
                       </div>
-                  </div>
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
-                      <div class="icon-box iconbox-teal">
-                          <div class="icon">
-                              <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+                      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+                          <div class="icon-box iconbox-teal">
+                              <div class="icon">
+                                  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
 
-                              </svg>
-                              <i class="bx bx-arch"></i>
+                                  </svg>
+                                  <i class="bx bx-arch"></i>
+                              </div>
+                              <h4><a href="">Divera Don</a></h4>
+                              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
                           </div>
-                          <h4><a href="">Divera Don</a></h4>
-                          <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
                       </div>
+
                   </div>
 
               </div>
-
-          </div>
       </section><!-- End Services Section -->
 
 
